# corridor

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
doc/: cubic_spline.md
include/corridor/: basic_types.h  cartesian_types.h  corridor.h  corridor_assignment.h  frenet_types.h
python_api/: core.cpp  corridor_assignment_wrapper.hpp  corridor_wrapper.hpp  cubic_spline_wrapper.hpp  unscented_transformation_wrapper.hpp  utility.hpp
python_api/scripts/: base_data.py  main.py  main_circle_polar_transformation.py  main_corridorAssignment.py  main_corridor_editor.py  main_corridor_relative_direction.py  main_error_UT_polar.py  main_eval_state_transformation.py  main_lateralConfidenceEval.py  main_lateral_assignment_confidence.py  main_lemniscate_approximation.py  main_longitudinalConfidenceEval.py  main_longitudinal_assignment_confidence.py  main_longitudinal_confidence_eval.py  main_movingConfidence.py  main_moving_confidence.py  main_polar_transformation.py  main_state_transformation_eval.py  spline_editor.py
src/: cartesian_types.cpp  corridor.cpp  corridor_assignment.cpp  cubic_interpolation_2d.cpp  cubic_spline.cpp  cubic_spline_coefficients.cpp  cubic_spline_utilities.cpp  frenet_types.cpp  polar_coordinate_transformation.cpp  state_transformation.cpp
test/: lanelet_mock.hpp  test_corridor.cpp  test_corridor_related_semantics.cpp  test_cubic_spline.cpp  test_cubic_spline_utilities.cpp  test_frenet_frame.cpp  test_frenet_polyline.cpp  test_interpolation_2d.cpp  test_unscented_transformation.cpp
(+18 files in other folders)
